grammar.js
    source_file: _ => 'hello',

    // Unicode escapes
    unicode_escape: $ => seq('\\', 'u', repeat('u'), $.hex_digit, $.hex_digit, $.hex_digit, $.hex_digit),

    // Lexical Syntax
    char_escape_seq: _ => seq('\\', choice('b', 't', 'n', 'f', 'r', '"', "'", '\\')),
      
    id: $ => choice(
      $.plainid,
      seq(
        '`', 
        repeat(choice(
          // $.char_no_back_quote_or_newline, // TODO. No such rule in the grammar
          $.unicode_escape,
          $.char_escape_seq)),
        '`')
    ),
    // idrest: $ =>  seq(repeat(choice($.letter, $.digit)), optional(seq('_', $.op))), Need to inline this rule
    // TODO think about moving this rule to a different object so it can match empty string
    integer_literal: $ => seq(choice($.decimal_numeral, $.hex_numeral), choice('L', 'l')),
    floating_point_literal: $ => choice(
      seq($.digit, repeat($.digit), '.', repeat($.digit), optional($.exponent_part), optional($.float_type)),
      seq('.', $.digit, repeat($.digit), optional($.exponent_part), optional($.float_type)),
      seq($.digit, repeat($.digit), $.exponent_part, optional($.float_type)),
      seq($.digit, repeat($.digit), optional($.exponent_part), $.float_type),
    ),
    boolean_literal: _ => choice('true', 'false'),
     
    character_literal: $ => seq("'",  choice($.printable_char, $.char_escape_seq), "'"),
    
    string_literal: $ => choice(
      seq('"', repeat($.string_element)), 
      seq('"""', 
        seq(
          repeat(seq(optional('"'), optional('"'), $.char /* TODO needs to be char without '"' */)),
          repeat('"')
        ), // multi_line_chars rule
        '"""')
    ),
    comment: _ => choice(
      seq('/*', /* TODO any sequence of characters; nested comments are allowed ,*/ '*/'),
      seq('//', /.*/),
    ),
